src/test/deca/context/valid/created/testPrint/printxNonInit.deca
// Description :
//    Test invalide : Utilisation de l'instruction print avec une variable non initialisée
//
// Résultats :
//    ok

{
    int x;
    print(x);  
}
